--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,103 @@
-.App {
-  text-align: center;
+body{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: hsl(0, 0%, 95%);
+  gap: 30px;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.stopwatch{
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  border: 5px solid;
+  border-radius: 50px;
+  background-color: white;
+  padding: 30px;
+  margin-top: 30px;
+  margin-right: 30px;
+  /* padding-top: 40px; */
+}
+.display{
+  font-size: 5rem;
+  font-family: monospace;
+  font-weight: bold;
+  color: hsl(0, 0%, 30%);
+  text-shadow: 2px 2px 2px hsla(0, 0%, 0%, 0.75);
+  margin-bottom: 25px;
+}
+.controls button{
+  font-size: 1.5rem;
+  font-weight: bold;
+  padding: 10px 20px;
+  margin: 5px;
+  min-width: 125px;
+  border: none;
+  border-radius: 10px;
+  cursor: pointer;
   color: white;
+  transition: background-color 0.5s ease;
+}
+.start-button{
+  background-color: hsl(115, 100%, 40%);
+}
+.start-button:hover{
+  background-color: hsl(115, 100%, 35%);
+}
+.stop-button{
+  background-color: hsl(10, 90%, 50%);
+}
+.stop-button:hover{
+  background-color: hsl(10, 90%, 45%);
+}
+.reset-button{
+  background-color: hsl(205, 90%, 60%);
+}
+.reset-button:hover{
+  background-color: hsl(205, 90%, 55%);
 }
 
-.App-link {
-  color: #61dafb;
+.split{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 100%;
+  border-radius: 30px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.top{
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 100%;
+}
+
+.top h1{
+  font-weight: bold;
+  font-size: 50px;
+  font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  color: rgb(66, 63, 63);
+}
+
+.time{
+  color: hsl(0, 0%, 30%);
+  font-size: 34px;
+  font-weight: 900;
+}
+
+.split button{
+  width: 150px;
+  height: 50px;
+  border-radius: 30px;
+  font-size: 30px;
+  font-weight: 600;
+  font-family: cursive;
+  color: rgb(57, 51, 51);
+  cursor: pointer;
+}
+
+.split button:hover{
+  background-color: darkgray;
+  color: white;
 }
